--- a/README
+++ b/README
@@ -1,1 +1,13 @@
+# Dripping Paint
+
 A simple dripping paint effect, intended as a dynamic background
+
+See it in action: [Here](http://tholman.com/exp/paint/proof/).
+
+# License
+
+MIT licensed
+
+Copyright (C) 2011 Tim Holman, http://tholman.com
+
+
